# pass-gen

./: Cargo.toml  pyproject.toml
pass-gen/: main.py
src/: lib.rs  methods.rs
src/methods/: by_char.rs  by_word.rs
